# CodeWizard

./: .clang-format  .clang-tidy  .clangd  .gitignore  ARCHITECTURE.md  BUILDING.md  CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  README.md  index.html
.github/: constants.env
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Emscripten.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake  add_headers_targets.cmake
configured_files/: config.hpp.in
example/: example.js  example.wasm  index.html
fuzz_test/: CMakeLists.txt
include/CodeWizard/: sample_library.hpp
plugin_template/: CMakeLists.txt  MyPlugin.cpp  MyPlugin.h  plugin_exports.cpp
src/: CMakeLists.txt  main.cpp
src/Bootstrap/: CMakeLists.txt
src/Bootstrap/include/Bootstrap/: IBootstrap.h
src/Bootstrap/internal/: BootstrapImpl.cpp  BootstrapImpl.h
src/BuildRun/: CMakeLists.txt
src/BuildRun/include/BuildRun/: BuildSystem.h  IBuildRun.h
src/BuildRun/internal/: BuildOrchestrator.cpp  BuildOrchestrator.h  BuildRunImpl.cpp  BuildRunImpl.h  Runner.cpp  Runner.h  ToolchainManager.cpp  ToolchainManager.h
src/BuildRun/src/: BuildSystem.cpp
src/Core/: CMakeLists.txt
src/Core/src/: Config.cpp  Logger.cpp  (+3 more)
src/Editor/: CMakeLists.txt
src/Editor/include/Editor/: CodeTextEdit.h  Cursor.h  Document.h  IEditor.h  ITextBuffer.h  TextBuffer.h  TreeSitterHighlighter.h  TreeSitterManager.h
src/Editor/internal/: EditorCore.cpp  EditorCore.h  EditorImpl.cpp  EditorImpl.h  EditorManager.cpp  EditorManager.h  IncrementalParser.cpp  IncrementalParser.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h
src/Editor/resources/: high.py
src/Editor/resources/queries/: queries.qrc
src/Editor/src/: CodeTextEdit.cpp  Cursor.cpp  Document.cpp  TextBuffer.cpp  TreeSitterHighlighter.cpp  TreeSitterManager.cpp
src/Extensibility/: CMakeLists.txt
src/Extensibility/include/Extensibility/: IExtensibility.h  IPlugin.h  IPluginFactory.h  IPluginHost.h  Plugin.h
src/Extensibility/internal/: ExtensibilityImpl.cpp  ExtensibilityImpl.h
src/Extensibility/src/: Plugin.cpp
src/LanguageIntelligence/: CMakeLists.txt
src/LanguageIntelligence/include/LanguageIntelligence/: Diagnostic.h  ILanguageIntelligence.h  ILanguageServer.h  LspClient.h  LspMessage.h
src/LanguageIntelligence/internal/: CompletionEngine.cpp  CompletionEngine.h  DiagnosticsManager.cpp  DiagnosticsManager.h  LSPClient.cpp  LSPClient.h  LanguageIntelligenceImpl.cpp  LanguageIntelligenceImpl.h
src/LanguageIntelligence/src/: Diagnostic.cpp  LspClient.cpp  LspMessage.cpp
src/Packaging/: CMakeLists.txt
src/Packaging/include/Packaging/: IPackaging.h  Packager.h
src/Packaging/internal/: Packager.cpp  Packager.h
src/Packaging/src/: Packager.cpp
src/Persistence/: CMakeLists.txt
src/Persistence/include/Persistence/: IPersistence.h  Session.h
src/Persistence/internal/: PersistenceImpl.cpp  PersistenceImpl.h
src/Persistence/src/: Session.cpp
src/Platform/: CMakeLists.txt
src/Platform/include/Platform/: FileSystem.h  IFileSystem.h  IPlatform.h  IThreading.h  ITimer.h  Path.h  Timer.h
src/Platform/internal/: FileSystem.cpp  FileSystem.h  PlatformImpl.cpp  PlatformImpl.h  Threading.cpp  Threading.h  Timer.cpp  Timer.h
src/Platform/src/: FileSystem.cpp  Path.cpp  Timer.cpp
src/Plugin/: CMakeLists.txt
src/Plugin/include/Plugin/: DynamicLibrary.h  Plugin.h  PluginManager.h
src/Plugin/src/: DynamicLibrary.cpp  Plugin.cpp  PluginManager.cpp
src/Project/: CMakeLists.txt
src/Project/include/Project/: IProject.h  Project.h
src/Project/internal/: ProjectImpl.cpp  ProjectImpl.h
src/Project/src/: Project.cpp
src/Runtime/: CMakeLists.txt
src/Runtime/include/Runtime/: Application.h  IDebugSession.h  IDebugger.h  IRuntimeController.h
src/Runtime/internal/: DebugSession.cpp  DebugSession.h  DebuggerManager.cpp  DebuggerManager.h  ProcessController.cpp  ProcessController.h
src/Runtime/src/: Application.cpp
src/Services/: CMakeLists.txt
src/Services/include/Services/: GlobalServices.h  IEventBus.h  IServiceRegistry.h  IServices.h  ITaskSchedular.h  ITaskScheduler.h  ServiceRegistry.h
src/Services/internal/: EventBus.cpp  EventBus.h  ServiceRegistry.cpp  ServiceRegistry.h  ServicesImpl.cpp  ServicesImpl.h  TaskScheduler.cpp  TaskScheduler.h
src/Services/src/: GlobalServices.cpp  ServiceRegistry.cpp
src/Theme/: CMakeLists.txt
src/UI/: CMakeLists.txt
src/UI/include/UI/: CodeTextEdit.h  CommandBar.h  EditorTab.h  IUI.h  MainWindow.h  ProjectView.h  Sidebar.h  SidebarTabBar.h  StatusBar.h  UIApplication.h
src/UI/internal/: UIImpl.cpp  UIImpl.h
src/UI/src/: CodeTextEdit.cpp  CommandBar.cpp  EditorTab.cpp  MainWindow.cpp  ProjectView.cpp  Sidebar.cpp  SidebarTabBar.cpp  StatusBar.cpp  UIApplication.cpp
src/codewizard/: CMakeLists.txt
src/codewizard/src/: EditorWidget.cpp  EditorWidget.h  MainWindow.cpp  MainWindow.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h  main.cpp
src/codewizard/src/editor/: EditorWidget.cpp  EditorWidget.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h
src/codewizard/src/ui/: MainWindow.ui
src/example/: CMakeLists.txt
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
test/Bootstrap/: BootstrapTest.cpp  CMakeLists.txt
test/Core/: CMakeLists.txt  ResultTests.cpp  TaskTests.cpp  TypesTests.cpp
test/Editor/: CMakeLists.txt  DocumentTests.cpp  TextBufferTests.cpp
test/Extensibility/: ExtensibilityTest.cpp
test/LanguageIntelligence/: LanguageIntelligenceTest.cpp
test/Persistence/: CMakeLists.txt  PersistenceTest.cpp
test/Platform/: CMakeLists.txt  FileSystemTests.cpp  PathTests.cpp
test/Services/: CMakeLists.txt  ServicesTest.cpp
test/UI/: CMakeLists.txt  UITest.cpp
tests/BuildRun/: BuildRunTest.cpp  CMakeLists.txt
tests/Editor/: EditorTest.cpp
tests/Extensibility/: CMakeLists.txt
tests/LanguageIntelligence/: CMakeLists.txt
tests/Platform/: PlatformTest.cpp
tests/Project/: CMakeLists.txt  ProjectTest.cpp
(+12 files in other folders)
